--- a/fssearch-parent/pom.xml
+++ b/fssearch-parent/pom.xml
@@ -95,7 +95,6 @@
                 <artifactId>poi</artifactId>
                 <version>${poi.version}</version>
             </dependency>
-
             <dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
@@ -135,19 +134,15 @@
 				<artifactId>tika-parsers</artifactId>
 				<version>${tika.version}</version>
 			</dependency>
-			<!--Dependency for parsing remote ssh directory [http://www.jcraft.com/jsch/] -->
-			<dependency>
-				<groupId>com.jcraft</groupId>
-				<artifactId>jsch</artifactId>
-				<version>0.1.51</version>
-			</dependency>
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.17</version>
-			</dependency>
 
-			<!-- === Commons === -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.4</version>
+            </dependency>
+
+
+            <!-- === Commons === -->
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
